--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1,4 +1,4 @@
-/* Increase the default font size */
+/* Increase the default font size adding words so theis change is visible*/
 html {
     font-size: 13pt;
   }
